[W4-004] can now use a button to delete comments [W4-005] Comments can be disabled and enabled

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,14 +2,32 @@
     box-sizing: border-box;
 }
 
+textarea {
+  width: 75%;
+}
+
 h2 {
   background-color: #800000;
   color: #d9d9d9;
   padding: 2em;
 }
 
+.input {
+  width: 33%;
+}
+
+#admincomment {
+  width: 30%;
+  float: left;
+  padding-left: 6px;
+}
+
 #comments {
   font-size: 14px;
+}
+
+#deletereactions {
+    display: inline;
 }
 
 #createscreen {
@@ -53,6 +71,7 @@ button {
 .bodytext {
   padding-left: 8px;
   margin-top: 0px;
+  width: 25%;
 }
 
 .category {
