bug fixed, now the deletebutton only shows if the blogger is logged in

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -104,6 +104,13 @@ button {
   display: none;
 }
 
+.fa.fa-trash {
+  background-color: white;
+  color: gray;
+  border: 1px solid gray;
+
+}
+
 .alternativebutton {
   background-color: white;
   color: gray;
