--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -104,10 +104,24 @@ button {
   display: none;
 }
 
+#searchform {
+display:flex;
+flex-direction:row;
+padding:2px;
+}
+
+#search {
+  /* Tell the input to use all the available space */
+  flex-grow:2;
+  /* And hide the input's outline, so the form looks like the outline */
+  border:none;
+}
+
 .fa.fa-trash {
   background-color: white;
   color: gray;
   border: 1px solid gray;
+
 }
 
 .alternativebutton {
@@ -131,7 +145,7 @@ button {
 }
 
 .dropbtn {
-    background-color: #d9d9d9;
+    background-color: white;
     color: black;
     font-size: 14px;
     border: none;
