--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,8 +2,13 @@
     box-sizing: border-box;
 }
 
+td {
+  width: 20px;
+  height: 20px;
+}
+
 a {
-  color: #800000;
+  color: #867979;
   text-decoration: underline;
 }
 
@@ -14,12 +19,10 @@ h2 {
 }
 
 h3 {
-  background-color: 	#867979;
+  background-color: #867979;
   padding: 1em;
   color: white;
 }
-
-
 
 body {
   margin: 0px;
@@ -71,7 +74,7 @@ button {
 }
 
 .comments {
-  color: #800000;
+  color: #867979;
   font-size: 14px;
   padding: 4px;
 }
@@ -94,6 +97,10 @@ button {
 #menu {
   float: left;
   width: 15%;
+}
+
+#colors {
+  margin-left: 17%;
 }
 
 #main2 {
@@ -174,6 +181,10 @@ padding:2px;
 
   #searchoptions {
     width: 100%;
+  }
+
+  #colors {
+    margin-left: 0px;
   }
 
   #main2 {
